[package]
name = "rtemplate-mcp"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
description = "MCP surface for rmcp-template"
license = "MIT"
publish = false

[features]
default = []
stdio = ["rmcp/transport-io"]
http = ["dep:axum", "rmcp/transport-streamable-http-server"]
test-support = []

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true }
http = "1"
rmcp = { version = "1.7.0", default-features = false, features = [
  "server",
  "macros",
  "elicitation",
  "schemars",
] }
rtemplate-auth = { path = "../rtemplate-auth" }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-runtime = { path = "../rtemplate-runtime" }
rtemplate-service = { path = "../rtemplate-service" }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros"] }
tracing = "0.1"
url = "2"
