[package]
name = "rtemplate-plugin-support"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
description = "Plugin setup and installation helpers for rmcp-template"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
rtemplate-contracts = { path = "../rtemplate-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
