[package]
name = "rtemplate-service"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
description = "Business service and upstream client for rmcp-template"
license = "MIT"
publish = false

[features]
default = ["client", "observability"]
client = ["dep:reqwest"]
observability = ["dep:rtemplate-observability", "dep:metrics"]
test-support = []

[dependencies]
anyhow = "1"
metrics = { version = "0.24", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-observability = { path = "../rtemplate-observability", optional = true }
serde_json = "1"
tracing = "0.1"
url = "2"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
