[package]
name = "rtemplate-test-support"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
description = "Test helpers for rmcp-template crates"
license = "MIT"
publish = false

[dependencies]
rtemplate-api = { path = "../rtemplate-api", features = ["auth"] }
rtemplate-auth = { path = "../rtemplate-auth" }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-service = { path = "../rtemplate-service", default-features = false, features = ["observability"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
