[package]
name = "soma-auth"
description = "Vendored OAuth 2.0 + JWT auth crate for soma and derived servers."
license = "MIT"
version = "0.4.1"
edition = "2024"
rust-version = "1.96"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["oauth", "auth", "axum", "jwt", "mcp"]
categories = ["authentication", "web-programming::http-server"]
publish = false

[features]
# Explicit empty default to keep Cargo feature unification a no-op for downstream consumers.
default = []
# Axum HTTP middleware and OAuth route handlers. Consumers that only need
# auth storage or outbound upstream OAuth should leave this off.
http-axum = ["dep:axum", "dep:tower"]
# Outbound upstream OAuth runtime (client cache, manager, refresh, store).
# Gated because it pulls in the rmcp client/auth transport stack and oauth2,
# which pure-auth consumers (browser/API OAuth) do not need.
upstream-oauth-rmcp = ["dep:rmcp-client", "dep:oauth2", "dep:anyhow"]

[dependencies]
axum = { version = "0.8", optional = true }
base64 = "0.22"
dashmap = "6"
getrandom = "0.4"
httpdate = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"] }
rsa = "0.10.0-rc.16"
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.11"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "net"] }
tower = { version = "0.5", optional = true }
tracing = "0.1"
url = "2"
anyhow = { version = "1", optional = true }
oauth2 = { version = "5.0", default-features = false, optional = true }

[dependencies.rmcp-client]
package = "rmcp"
version = "=2.2.0"
default-features = false
features = ["client", "auth", "transport-streamable-http-client-reqwest"]
optional = true

[dev-dependencies]
rand = "0.10"
tempfile = "3.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wiremock = "0.6"
