[package]
name = "soma-mcp-server"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Reusable inbound MCP server helpers for response paging and protocol shaping"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = []

[dependencies]
rmcp = { version = "=2.2.0", default-features = false, features = ["server"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
