[package]
name = "soma-mcp"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "MCP surface for soma"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = []
stdio = ["rmcp/transport-io"]
http = ["dep:axum", "rmcp/transport-streamable-http-server"]
auth = ["dep:soma-auth", "soma-runtime/auth"]
oauth = ["auth", "soma-runtime/oauth"]
test-support = []

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true }
http = "1"
rmcp = { version = "2.1.0", default-features = false, features = [
  "server",
  "macros",
  "elicitation",
  "schemars",
] }
soma-auth = { path = "../soma-auth", optional = true, features = ["http-axum"] }
soma-contracts = { path = "../soma-contracts" }
soma-gateway = { path = "../soma-gateway", features = ["protected-routes"] }
soma-runtime = { path = "../soma-runtime", default-features = false }
soma-service = { path = "../soma-service", default-features = false }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
