[package]
name = "soma-openapi"
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
publish = false

[dependencies]
futures = "0.3"
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "net", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
