[package]
name = "soma-plugin-support"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Plugin setup and installation helpers for soma"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[dependencies]
anyhow = "1"
soma-contracts = { path = "../soma-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
