[package]
name = "soma-runtime"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
description = "Shared runtime state and auth policy for soma surfaces"
license = "MIT"
publish = false

[features]
default = []
auth = ["dep:soma-auth"]
oauth = ["auth"]

[dependencies]
anyhow = "1"
soma-auth = { path = "../soma-auth", optional = true }
soma-contracts = { path = "../soma-contracts" }
soma-service = { path = "../soma-service", default-features = false }
tracing = "0.1"
url = "2"
