[package]
name = "soma-runtime"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Shared runtime state and auth policy for soma surfaces"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = []
auth = ["dep:soma-auth"]
oauth = ["auth"]

[dependencies]
anyhow = "1"
soma-auth = { path = "../soma-auth", optional = true, features = ["http-axum"] }
soma-contracts = { path = "../soma-contracts" }
soma-gateway = { path = "../soma-gateway" }
soma-service = { path = "../soma-service", default-features = false }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
