[package]
name = "soma-service"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Business service and upstream client for soma"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = ["client", "observability"]
client = []
observability = ["dep:soma-observability", "dep:metrics"]
test-support = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
jsonschema = "0.47"
metrics = { version = "0.24", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "2.1.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
soma-contracts = { path = "../soma-contracts" }
soma-observability = { path = "../soma-observability", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "process", "rt", "time"] }
tracing = "0.1"
url = "2"
wasmtime = { version = "46.0.1", default-features = false, features = ["anyhow", "cranelift", "runtime", "std"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
