[package]
name = "soma-web"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Embedded static web UI adapter for soma"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = ["web"]
web = []

[dependencies]
axum = "0.8"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
