# =============================================================================
# Cargo.toml — Facade and binary crate for the Soma project
#
# This crate owns the public facade plus the soma and
# soma-server entrypoints. Implementation lives in sibling crates.
# =============================================================================

[package]
name = "soma"
version = "0.4.7"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Batteries-included RMCP runtime and scaffold for provider-backed Rust MCP servers with CLI, REST, HTTP MCP, and plugins."
homepage.workspace = true
keywords = ["mcp", "rmcp", "providers", "runtime", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "../../README.md"
repository.workspace = true
autobins = false

[lib]
name = "soma"

[[bin]]
name = "soma"
path = "src/bin/soma.rs"
required-features = ["local-adapter"]

[[bin]]
name = "soma-server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", optional = true }
soma-runtime = { path = "../soma-runtime", default-features = false }
soma-api = { path = "../soma-api", optional = true }
soma-auth = { path = "../soma-auth", optional = true }
soma-cli = { path = "../soma-cli", optional = true }
soma-contracts = { path = "../soma-contracts" }
soma-mcp = { path = "../soma-mcp", optional = true }
soma-observability = { path = "../soma-observability", optional = true }
soma-plugin-support = { path = "../soma-plugin-support", optional = true }
soma-service = { path = "../soma-service", default-features = false }
soma-web = { path = "../soma-web", optional = true }
rmcp = { version = "2.1.0", default-features = false, optional = true }
serde_json = { version = "1", optional = true }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"], optional = true }

[features]
default = ["full"]
cli = ["dep:soma-cli", "soma-service/client"]
mcp = ["dep:soma-mcp"]
mcp-stdio = [
  "mcp",
  "dep:rmcp",
  "rmcp/transport-io",
  "soma-mcp/stdio",
  "soma-service/client",
]
api = ["auth", "dep:soma-api"]
auth = [
  "dep:soma-auth",
  "soma-api?/auth",
  "soma-mcp?/auth",
  "soma-runtime/auth",
]
oauth = ["auth", "soma-api?/oauth", "soma-mcp?/oauth", "soma-runtime/oauth"]
observability = ["dep:soma-observability", "soma-service/observability"]
plugin = ["cli", "dep:soma-plugin-support"]
mcp-http = [
  "api",
  "mcp",
  "dep:axum",
  "dep:serde_json",
  "dep:tower-http",
  "soma-mcp/http",
  "soma-service/client",
]
web = ["api", "dep:soma-web"]
local-adapter = ["cli", "mcp-stdio"]
server = ["cli", "api", "mcp-http", "mcp-stdio"]
full = ["local-adapter", "server", "web", "oauth", "observability", "plugin"]
test-support = ["soma-mcp?/test-support"]

[dev-dependencies]
async-trait = "0.1"
soma = { path = ".", package = "soma", features = ["test-support"] }
soma-contracts = { path = "../soma-contracts" }
soma-service = { path = "../soma-service" }
soma-test-support = { path = "../soma-test-support" }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wat = "1.252.0"
rmcp = { version = "2.1.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
