[package]
name = "labby-palette-tauri"
version = "0.1.0"
description = "Tauri command palette for the Labby gateway API"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
publish = false

[workspace]

[lib]
name = "labby_palette_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "labby-palette-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["sync", "net", "io-util", "time", "macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
